kubernetes/istio-sample/ingress-gateway-istio1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: apps-vindpro-dev-tls # This should match the Certifcate secretName
    hosts:
    - sample3.vindpro.dev
    - sample4.vindpro.dev
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - sample3.vindpro.dev
    - sample4.vindpro.dev
