kubernetes/istio-sample/ingress-vs-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-vs
spec:
  hosts:
  - sample3.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes-first
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-vs
spec:
  hosts:
  - sample4.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes-second
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-vs
spec:
  hosts:
  - proxy-istio.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: proxy
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
  - kiali.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 9090
