kubernetes/istio-sample/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - sample3.vindpro.dev
    - sample4.vindpro.dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-vs
spec:
  hosts:
  - sample3.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes-first
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-vs
spec:
  hosts:
  - sample4.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes-second
